--- a/frontpage/views/frontpage.html
+++ b/frontpage/views/frontpage.html
@@ -56,15 +56,13 @@
 
 <body onload="loadData();">
 <div width="100%" align="right"><img src="/images/redhat.png" width="200px"/></div>
+<div align="center">
 <h1>Openshift Container Platform 4.2.x DevEx Workshop</h1><br/>
-
 <b class="outputLarge">Workshop Address: </b><span class="outputLarge" id="outputURL"></span><br/><br/>
 <b class="outputLarge">Terminal Address: </b><span class="outputLarge" id="outputTerminal"></span><br/><br/>
-
-<b class="outputLarge">Attendee Material: </b><span class="outputLarge">https://github.com/utherp0/workshop4</span><br/><br/>
-
+<b class="outputLarge">Attendee Material: </b><span class="outputLarge">https://github.com/utherp0/workshop4/attendee</span><br/><br/>
 <b class="outputLarge">Reference Docs: </b><span class="outputLarge">http://docs.openshift.com</span><br/><br/>
-
+</div>
 
 </body>
 </html>
