--- a/frontpage/views/frontpage.html
+++ b/frontpage/views/frontpage.html
@@ -16,6 +16,7 @@
     {
       getURL();
       getTerminal();
+      getDocument();
     }
 
     function getURL()
@@ -32,7 +33,13 @@
       }});
     }
     
-
+    function getDocument()
+    {
+      $.ajax({url: "getdocurl", success: function( result ) {
+        $("#outputDocument").html(result);
+      }});
+    }
+    
     function jsonCall()
     {
       $.ajax({url:"nasa", success: function(result) {
@@ -60,6 +67,7 @@
 <h1>Openshift Container Platform 4.2.x DevEx Workshop</h1><br/>
 <b class="outputLarge">Workshop Address: </b><span class="outputLarge" id="outputURL"></span><br/><br/>
 <b class="outputLarge">Terminal Address: </b><span class="outputLarge" id="outputTerminal"></span><br/><br/>
+<b class="outputLarge">Documentation Address: </b><span class="outputLarge" id="outputDocument"></span><br/><br/>
 <b class="outputLarge">Attendee Material: </b><span class="outputLarge">https://github.com/utherp0/workshop4/attendee</span><br/><br/>
 <b class="outputLarge">Reference Docs: </b><span class="outputLarge">http://docs.openshift.com</span><br/><br/>
 </div>
