--- a/frontpage/views/frontpage.html
+++ b/frontpage/views/frontpage.html
@@ -22,6 +22,7 @@
     function getURL()
     {
       $.ajax({url: "geturl", success: function( result ) {
+        alert(result);
         $("#outputURL").html(result);
       }});
     }
