--- a/frontpage/views/frontpage.html
+++ b/frontpage/views/frontpage.html
@@ -22,7 +22,7 @@
     function getURL()
     {
       $.ajax({url: "geturl", success: function( result ) {        
-        $("#outputURL").html(result);
+        //$("#outputURL").html(result);
 
         targetLink = document.getElementById("URLlink");
         targetLink.href = result;
@@ -33,14 +33,22 @@
     function getTerminal()
     {
       $.ajax({url: "getterminal", success: function( result ) {
-        $("#outputTerminal").html(result);
+        //$("#outputTerminal").html(result);
+
+        targetLink = document.getElementById("terminallink");
+        targetLink.href = result;
+        targetLink.innerHTML = result;
       }});
     }
     
     function getDocument()
     {
       $.ajax({url: "getdocurl", success: function( result ) {
-        $("#outputDocument").html(result);
+        //$("#outputDocument").html(result);
+
+        targetLink = document.getElementById("documentlink");
+        targetLink.href = result;
+        targetLink.innerHTML = result;
       }});
     }
     
@@ -69,12 +77,11 @@
 <div width="100%" align="right"><img src="/images/redhat.png" width="200px"/></div>
 <div align="center">
 <h1>Openshift Container Platform 4.2.x DevEx Workshop</h1><br/>
-<b class="outputLarge">Workshop Address: </b><span class="outputLarge" id="outputURL"></span><br/><br/>
-<b class="outputLarge">Workshop Address Test: </b><a class="outputLarge" id="URLlink" target="_new"></a><br/><br/>
-<b class="outputLarge">Terminal Address: </b><span class="outputLarge" id="outputTerminal"></span><br/><br/>
-<b class="outputLarge">Documentation Address: </b><span class="outputLarge" id="outputDocument"></span><br/><br/>
-<b class="outputLarge">Attendee Material: </b><span class="outputLarge">https://github.com/utherp0/workshop4/attendee</span><br/><br/>
-<b class="outputLarge">Reference Docs: </b><span class="outputLarge">http://docs.openshift.com</span><br/><br/>
+<b class="outputLarge">Workshop Address: </b><a class="outputLarge" id="URLlink" target="_new"></a><br/><br/>
+<b class="outputLarge">Terminal Address: </b><a class="outputLarge" id="terminallink" target="_new"></a><br/><br/>
+<b class="outputLarge">Documentation Address: </b><a class="outputLarge" id="documentlink" target="_new"></a><br/><br/>
+<b class="outputLarge">Attendee Material: </b><a class="outputLarge" href="https://github.com/utherp0/workshop4/attendee" target="_new">https://github.com/utherp0/workshop4/attendee</a><br/><br/>
+<b class="outputLarge">Reference Docs: </b><a class="outputLarge" href="http://docs.openshift.com" target="_new">http://docs.openshift.com</a><br/><br/>
 </div>
 
 </body>
