Corrected target of hrefs

--- a/frontpage/views/frontpage.html
+++ b/frontpage/views/frontpage.html
@@ -77,11 +77,11 @@
 <div width="100%" align="right"><img src="/images/redhat.png" width="200px"/></div>
 <div align="center">
 <h1>Openshift Container Platform 4.2.x DevEx Workshop</h1><br/>
-<b class="outputLarge">Workshop Address: </b><a class="outputLarge" id="URLlink" target="_new"></a><br/><br/>
-<b class="outputLarge">Terminal Address: </b><a class="outputLarge" id="terminallink" target="_new"></a><br/><br/>
-<b class="outputLarge">Documentation Address: </b><a class="outputLarge" id="documentlink" target="_new"></a><br/><br/>
-<b class="outputLarge">Attendee Material: </b><a class="outputLarge" href="https://github.com/utherp0/workshop4/attendee" target="_new">https://github.com/utherp0/workshop4/attendee</a><br/><br/>
-<b class="outputLarge">Reference Docs: </b><a class="outputLarge" href="http://docs.openshift.com" target="_new">http://docs.openshift.com</a><br/><br/>
+<b class="outputLarge">Workshop Address: </b><a class="outputLarge" id="URLlink" target="_blank"></a><br/><br/>
+<b class="outputLarge">Terminal Address: </b><a class="outputLarge" id="terminallink" target="_blank"></a><br/><br/>
+<b class="outputLarge">Documentation Address: </b><a class="outputLarge" id="documentlink" target="_blank"></a><br/><br/>
+<b class="outputLarge">Attendee Material: </b><a class="outputLarge" href="https://github.com/utherp0/workshop4/attendee" target="_blank">https://github.com/utherp0/workshop4/attendee</a><br/><br/>
+<b class="outputLarge">Reference Docs: </b><a class="outputLarge" href="http://docs.openshift.com" target="_blank">http://docs.openshift.com</a><br/><br/>
 </div>
 
 </body>
