--- a/frontpage/views/frontpage.html
+++ b/frontpage/views/frontpage.html
@@ -80,7 +80,7 @@
 <b class="outputLarge">Workshop Address: </b><a class="outputLarge" id="URLlink" target="_blank"></a><br/><br/>
 <b class="outputLarge">Terminal Address: </b><a class="outputLarge" id="terminallink" target="_blank"></a><br/><br/>
 <b class="outputLarge">Documentation Address: </b><a class="outputLarge" id="documentlink" target="_blank"></a><br/><br/>
-<b class="outputLarge">Attendee Material: </b><a class="outputLarge" href="https://github.com/utherp0/workshop4/attendee" target="_blank">https://github.com/utherp0/workshop4/attendee</a><br/><br/>
+<b class="outputLarge">Attendee Material: </b><a class="outputLarge" https://github.com/utherp0/workshop4/tree/master/attendee target="_blank">https://github.com/utherp0/workshop4/attendee</a><br/><br/>
 <b class="outputLarge">Reference Docs: </b><a class="outputLarge" href="http://docs.openshift.com" target="_blank">http://docs.openshift.com</a><br/><br/>
 </div>
 
