Reconfigured lab setup - removed PV mess from httpd app, added some more lab variables, and tidied up template

--- a/setup/playbooks/roles/deploy_docs/templates/manifest.yml.j2
+++ b/setup/playbooks/roles/deploy_docs/templates/manifest.yml.j2
@@ -2,7 +2,7 @@ id: "{{ item.id }}"
 name: "{{ item.title }}"
 
 content:
-  url: http://labs:8080/labs
+  url: https://raw.githubusercontent.com/utherp0/workshop4/master/labs
 
 vars:
   OPENSHIFT_CONSOLE_URL: "https://console-openshift-console.mycluster.com"
