--- a/setup/playbooks/roles/deploy_docs/templates/workshopper.yml.j2
+++ b/setup/playbooks/roles/deploy_docs/templates/workshopper.yml.j2
@@ -5,7 +5,7 @@ metadata:
   name: devex
   namespace: docs
 data:
-  WORKSHOPS_URLS: "{{ dir_out.stdout_lines | map('regex_replace', '^(.*)$', 'http://labs:8080/\\1') | list | join(',') }}"
+  WORKSHOPS_URLS: "{{ workshop_manifests | map(attribute='id') | map('regex_replace', '^(.*)$', 'http://labs:8080/\\1') | list | join(',') }}"
   OPENSHIFT_CONSOLE_URL: "{{ OPENSHIFT_CONSOLE_URL }}"
   LOG_TO_STDOUT: "true"
 ---
@@ -31,6 +31,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: devex
+          resources: {}
 ---
 apiVersion: v1
 kind: Service
