--- a/setup/playbooks/roles/deploy_docs/templates/manifestConfigMap.yml.j2
+++ b/setup/playbooks/roles/deploy_docs/templates/manifestConfigMap.yml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: manifests
-  namespace: docs
+  namespace: {{ project_name }}
 data:
 {% for item in workshop_manifests %}
   {{ item.id }}: |-
