--- a/setup/playbooks/roles/users/templates/rolebindings.yml.j2
+++ b/setup/playbooks/roles/users/templates/rolebindings.yml.j2
@@ -11,9 +11,23 @@ roleRef:
   kind: ClusterRole
   name: admin
 subjects:
-{% for usernum in range((team - 1) * 10 + 1, (team * 10) + 1, 1) %}
 - apiGroup: rbac.authorization.k8s.io
-  kind: User
-  name: user{{ usernum }}
-{% endfor %}
+  kind: Group
+  name: {{ team }}
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  creationTimestamp: null
+  name: admin
+  namespace: team{{ team }}-infra
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
+subjects:
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: {{ team }}
 {% endfor %}
