route url testing

--- a/setup/playbooks/roles/deploy_docs/templates/manifestConfigMap.yml.j2
+++ b/setup/playbooks/roles/deploy_docs/templates/manifestConfigMap.yml.j2
@@ -11,11 +11,12 @@ data:
     name: "{{ item.title }}"
 
     content:
-      url: https://raw.githubusercontent.com/utherp0/workshop4/master/labs
+      url: https://raw.githubusercontent.com/akouao/workshop4/master/labs
 
     vars:
       OPENSHIFT_CONSOLE_URL: "will be overwritten"
       USERNAME_URL: "will be overwritten"
+      ROUTE_URL: "will be overwitten"
 
     modules:
       activate:
